--- a/estilo.css
+++ b/estilo.css
@@ -1,36 +1,47 @@
 @charset "UTF-8";
-* {
-    margin: 0;
-    padding: 0;
+
+/*   Paleta de Cores
+    Verde: #49a09d
+    Lilás: #5f2c82
+*/
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
     box-sizing: border-box;
 }
-
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow: hidden; /* Evita rolagem */
+body, html {
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
 }
 
-.container {
-    display: flex;
-    width: 100%;
-    height: 100vh; /* 100% da altura da viewport */
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
 }
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
 
-.panel {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    color: white;
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.623);
 }
-
-.left-panel {
-    flex: 2;
-    background-color: #3498db; /* Cor de fundo do painel esquerdo */
+section#login > div#imagem {
+    display: block;
+    background: #5f2c82 url('imagens/pexels-tara-winstead-8386440.jpg');
+    background-size: cover;
+    height: 200px;
 }
-
-.right-panel {
-    flex: 1;
-    background-color: #2ecc71; /* Cor de fundo do painel direito */
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
 }
