--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,7 +18,7 @@ body, html {
 }
 
 main{
-    position: relative;
+    position: absolute;
     height: 100vh;
     width: 100vw;
 }
@@ -129,4 +129,18 @@ form > a.botao:hover {
 
 form > a.botao > span{
     font-size: 0.8em;
+}
+
+footer {
+    position: relative;
+    background-color: #5f2c82;
+    top: 90%;
+    left: 0;
+    width: 100%;
+    height: 70%;
+    transition: top 0.5s ease; /* Transição suave para a propriedade bottom */
+}
+
+.mostrar {
+    top: 30%; /* Quando a classe 'mostrar' é adicionada */
 }
